# tomsup

./: .buildinfo  .gitignore  CNAME  MANIFEST.in  README.md  agent.html  citation.cff  genindex.html  index.html  installation.html  ktom_functions.html  makefile  objects.inv  output_calls.txt  output_calls1.txt  output_calls2.txt  output_time.txt  output_time1.txt  output_time2.txt  payoffmatrix.html  plot.html  potential_names.txt  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  siptom.py  test_script.py  using-tomsup.html  utils.html
.doctrees/: agent.doctree  environment.pickle  index.doctree  installation.doctree  ktom_functions.doctree  payoffmatrix.doctree  plot.doctree  using-tomsup.doctree  utils.doctree
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 01_bugs.md  config.yml
.github/workflows/: depandabot_automerge.yml  documentation.yml  lint.yml  pytest-cov-comment.yml  run_tutorials.yml  tests.yml
_modules/: index.html
_modules/tomsup/: agent.html  ktom_functions.html  payoffmatrix.html  plot.html  utils.html
_sources/: index.rst.txt  ktom_functions.rst.txt  payoffmatrix.rst.txt
_static/: documentation_options.js
agent/: ktom_functions.py
agent_ktom/: ktom.py  ktom_functions.py
dev/: debug.py  fit.py  fit_maximum_likelihood.py  json_writer.py  test.py  testing_plot_fun.py  viz.Rmd
dev/experiment_analysis/: CogSci19_MatchingPennies_TOM_data.csv  analysis.Rmd
dev/pytest-coverage/: .coveragerc  run_coverage.py
docs/: agent.rst  conf.py  index.rst  installation.rst  ktom_functions.rst  plot.rst  using-tomsup.rst  utils.rst
old/: creating_an_agent.txt  siptom.py
papers/introducing tomsup/: large_tournament.py
papers/introducing tomsup/comparison/: PTW_ToM_behaviour_test.m  PTW_ToM_speed_test.m  TOM_behavior_runGame.m  ToM_behaviour.m  ToM_speed_test.m  behaviour_test.py  output_calls2.txt  output_time2.txt  speed.py  speed_test.py
papers/introducing_tomsup/: large_tournament.py  parameter_estimation.py
papers/introducing_tomsup/comparison/: VBA_behavior_comparison.m  VBA_behavior_test.m  VBA_speed_test.m  tomsup_behaviour_comparison.py  tomsup_behaviour_test.py  tomsup_speed_comparison.py
papers/introducing_tomsup/experiment_analysis/: analysis.Rmd  forced_choices.py
papers/introducing_tomsup/parameters_estimation/: parameter_estimation.Rmd
simulations/: behaviour_test.py  large_tournament.py  speed_test.py  speedtest.py  test_script.py
siptom/: __init__.py  agent.py  payoff_matrix.py  utils.py
tomsup/: __init__.py  _version.py  about.py  agent.py  agent_info.json  introduction.ipynb  ktom_functions.py  payoffmatrix.py  plot.py  plot_results.py  sample_Arnault.py  utils.py
tomsup.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tomsup/agent_ktom/: ktom.py
tomsup/tests/: test_agent.py  test_ktom_functions.py  test_payoffmatrix.py
tomsup/tests/test_tutorials/: test_creating_an_agent.py  test_getting_started.py  test_paper_implementation.py  test_specifying_internal_states.py
tutorials/: .paper.ndjson.icloud  Creating_an_agent.ipynb  Getting_started.ipynb  Introduction copy.ipynb  Introduction.ipynb  TEST.py  introduction_to_basic_agents.ipynb  introduction_to_tom.ipynb  introduction_to_tom_COPY.ipynb  introduction_tom.ipynb  paper_appendix_Creating_an_agent .ipynb  paper_implementation copy.ipynb  paper_implementation.ipynb  specifying_internal_states.ipynb
tutorials/.ipynb_checkpoints/: Introduction-checkpoint.ipynb
tutorials/Video_example/: Tester Script.py
tutorials/example_data_analysis/.Rproj.user/52FA19E4/sources/prop/: A7B5F874  C487315F  INDEX
tutorials/example_data_analysis/.Rproj.user/52FA19E4/sources/s-A55AECE5/: 038E3677  3ABAAB84  5895A4AE  5895A4AE-contents  DB4B166E  DB4B166E-contents
tutorials/example_data_analysis/.Rproj.user/52FA19E4/unsaved-notebooks/5895A4AE/1/: chunks.json
tutorials/example_data_analysis/.Rproj.user/shared/notebooks/: paths
tutorials/psychopy_experiment/: intro_text.txt  matching_pennies.py  readme.md  readme.txt
tutorials/psychopy_experiment/data/: ID_1.csv
