[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tomsup"
version = "1.4.0"
description = "An implementation of game theory of mind in a agent based framework following the implementation of Devaine, et al. (2017)."
authors = [
    { name = "Kenneth C. Enevoldsen", email = "kenevoldsen@pm.me" },
    { name = "Peter T. Waade" },
]
license = { text = "Apache License 2.0" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9,<3.13"
keywords = ["tom", "theory-of-mind", "game-theory"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "importlib-metadata>=1.0; python_version<'3.8'",
    "numpy>1.24.4",
    "pandas>=1.2.3",
    "scipy>=1.6.3",
    "matplotlib>=3.4.2",
    "seaborn>=0.11.1",
    "joblib>=1.2.0",
    "wasabi>=0.8.2",
]


[project.urls]
Homepage = "https://github.com/KennethEnevoldsen/tomsup"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
tomsup = ["agent_info.json"]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["B", "C", "E", "F", "W", "B9"]

ignore = ["E203", "E266", "E501", "E731", "C901"]
[tool.coverage.run]

[tool.coverage.report]
omit = ["**/tests/*", "**/about.py"]
exclude_lines = [
    "pragma: no cover",
    "def __unicode__",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
show_missing = true

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "ruff>=0.14.9",
    "sphinx>=4.5.0,<5.1.0",
    "furo>=2022.6.21,<2023.3.28",
    "sphinx-copybutton>=0.5.0,<0.6.0",
    "sphinxext-opengraph>=0.6.3,<0.9.0",
    "sphinx_design>=0.2.0,<0.3.1",
]
