[metadata]
name = tomsup
description = An implementation of game theory of mind in a agent based framework following the implementation of Devaine, et al. (2017).
author = Kenneth C. Enevoldsen and Peter T. Waade
author_email = kennethcenevoldsen@gmail.com
    url="https://github.com/KennethEnevoldsen/tomsup",
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    tom
    theory-of-mind
    game-theory
[options]
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
    numpy>=1.2.4,< 1.3.0
    pandas>=1.2.3,< 1.3.0
    scipy>=1.6.3,< 1.7.0
    matplotlib>=3.4.2,< 3.5.0
    seaborn>=0.11.1,< 0.12.0
    joblib>=1.0.1,< 1.1.0
    wasabi>=0.8.2,< 0.10.0

setup_requires =
    setuptools

[bdist_wheel]
universal = true

[sdist]
formats = gztar

[flake8]
ignore = E203, E266, E501, E731, W503
max-line-length = 80
select = B,C,E,F,W,T4,B9
exclude =
    .env,
    .git,
    __pycache__,

[mypy]
ignore_missing_imports = True
no_implicit_optional = True

[coverage:run]

[coverage:report]
omit =
    **/tests/*
    **/tests/*
    **/about.py
exclude_lines =
    pragma: no cover
    # Don't complain about missing debug-only code:
    def __unicode__
    def __repr__
    if self\.debug
    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError
    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
show_missing = True
